bpo-35310: Retry select() calls on EINTR even if deadline has passed

select() calls are retried on EINTR (per PEP 475).  However, if a
timeout was provided and the deadline has passed after running signal
handlers, we should still retry select() with a non-blocking call -- to
make sure rlist, wlist and xlist are initialized appropriately.